# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\QuizController;
+use App\Http\Controllers\UsuarioController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -16,13 +17,19 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::prefix('/login')->group(function () {
-    Route::post('/professor', [AuthController::class, 'loginProfessor'])->name('api.login.professor');
-    Route::post('/aluno', [AuthController::class, 'loginAluno'])->name('api.login.aluno');
+Route::prefix('/app')->group(function () {
+    Route::prefix('/login')->group(function () {
+        Route::post('/professor', [AuthController::class, 'loginProfessor'])->name('api.app.login.professor');
+        Route::post('/aluno', [AuthController::class, 'loginAluno'])->name('api.app.login.aluno');
+    });
+
+    Route::prefix('/usuarios')->group(function () {
+        Route::post('/cadastro-professor', [UsuarioController::class, 'cadastroProfessor'])->name('api.app.usuarios.cadastro.professor');
+        Route::post('/cadastro-aluno', [UsuarioController::class, 'cadastroAluno'])->name('api.app.usuarios.cadastro.aluno');
+    });
 });
 
 Route::middleware('jwt.authenticate')->group(function () {
-
     Route::prefix('/quiz')->group(function () {
         Route::get('/status/listar', [QuizController::class, 'listarStatus'])->name('api.quiz.status.listar');
     });
